! Update css to prevent avatar clipping

--- a/css/GoogleMap.css
+++ b/css/GoogleMap.css
@@ -5,18 +5,18 @@
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
-	width: 280px;
+	overflow: hidden;
 }
 
 .gmm_poster {
     vertical-align: top;
     word-break: break-all;
     word-wrap: break-word;
+	width: 240px;
 }
 
 .gmm_avatar {
 	float: right;
-	width: 120px;
 	margin-left: 4px;
 }
 
@@ -50,7 +50,6 @@
 .googleMap ul ul
 {
 	padding: 3px 0 0 0;
-	text-align: center;
 }
 
 .googleMap ul ul li
